ajout mnist-waveimage-backbone-CNN-learn.py

--- a/foveated-iclr/mnist-waveimage-saliency-map.ipynb
+++ b/foveated-iclr/mnist-waveimage-saliency-map.ipynb
@@ -88,15 +88,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from waveimage import calc_U"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -180,7 +171,7 @@
     "                    data = []\n",
     "                    cpt = 0\n",
     "                    for v in Data_train[c][h][u]:\n",
-    "                        if False : #!!!!! Naive model #np.linalg.norm(v) < 1e-16:\n",
+    "                        if np.linalg.norm(v) < 1e-16:\n",
     "                            cpt += 1\n",
     "                        else:\n",
     "                            data += [v]\n",
