--- a/patch-deep-interleaved/deep MNIST Tests 3 couches generatives-sans biais-interleaved-ReLu.ipynb
+++ b/patch-deep-interleaved/deep MNIST Tests 3 couches generatives-sans biais-interleaved-ReLu.ipynb
@@ -430,7 +430,7 @@
    ],
    "source": [
     "#with tf.Session() as sess:\n",
-    "if True: #not os.path.isfile(\"models/deep-MNIST-3-couches-incremental-optim-sans-biais-INTERLEAVED-RELU.ckpt.index\"):\n",
+    "if not os.path.isfile(\"models/deep-MNIST-3-couches-incremental-optim-sans-biais-INTERLEAVED-RELU.ckpt.index\"):\n",
     "    for rep in range(120): #120\n",
     "        for i in range(20000): #2400000\n",
     "            batch = mnist.train.next_batch(BATCH_SIZE)\n",
